--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     background: #f1f1f1;
 }
@@ -49,4 +49,4 @@ footer {
     aside, main {
         margin-bottom: 20px;
     }
-}
+} */
